Invalid ECM/EMM values in TS demuxer
According to ISO 13818-1 page 34, ECM and EMM stream_id values are respectively 0xF0 and 0xF1 and not 0xB0/0xB1.
The attached patch corrects that.
Aurelien Nephtali
According to ISO 13818-1 page 34, ECM and EMM stream_id values are respectively 0xF0 and 0xF1 and not 0xB0/0xB1.
The attached patch corrects that.
Aurelien Nephtali
VideoLAN code repository instance